--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
 
             <article class="team2_member team_member">
                 <div class="team_member-image">
-                    <img src="tutor8.jpg">
+                    <img src="tutor8.JPG">
                 </div>
                 <div class="team_member-info">
                     <h4>Elisha David</h4>
@@ -337,7 +337,7 @@
 
             <article class="team2_member team_member">
                 <div class="team_member-image">
-                    <img src="tutor9.jpg">
+                    <img src="tutor9.JPG">
                 </div>
                 <div class="team_member-info">
                     <h4>Witty Prince</h4>
@@ -379,7 +379,7 @@
 
             <article class="team2_member team_member">
                 <div class="team_member-image">
-                    <img src="tutor12.jpg">
+                    <img src="tutor12.JPG">
                 </div>
                 <div class="team_member-info">
                     <h4>Vaner Charles</h4>
