--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                 <div class="faq_icon"><i class="fa-solid fa-plus"></i></div>
                 <div class="question_answer">
                     <h4>I don't have up to this amount. Is there anything I can do?</h4>
-                    <p>Yes. We've organised 6 creative contests where you can get in at a discounted price.
-                        . click <a href="contact.html" class="col">more info.</a>
+                    <p>Yes. We've organised 6 creative contests where you can get in at a discounted price. contact us for more info
                     </p>
                 </div>
             </article>
